actual version code

--- a/ecommerce/templates/account/logout.html
+++ b/ecommerce/templates/account/logout.html
@@ -20,10 +20,11 @@
 
   {% endif %}
   
-  <button  class="btn btn-outline-success" type="submit">{% trans 'Sign Out' %}</button>
+  <button  class="btn btn-outline-secondary" type="submit">{% trans 'Sign Out' %}</button>
   <a class="btn btn-outline-danger" id="custom_logout_no" href="/accounts/profile/">{% trans 'No' %}</a>
 </form>
 
 </div>
 
 {% endblock %}
+f
