--- a/products/templates/products/calc.html
+++ b/products/templates/products/calc.html
@@ -7,7 +7,48 @@
     {% load crispy_forms_tags %}
     {% block content %}
     {% load static %}
+    <br> <br>
 
+  <br> <br>
+
+<h4><p>1. Выберите нужный продукт</p> </h4>
+
+<h6>
+В списке "параметры", выберите размер Вашего продукта. <p>Если Вы не нашли необходимый размер <p>- выбираете ближайший похожий, а в письме напишите интересующие вас размеры. <p>Размер указан в миллиметрах.
+
+В списке "Краски" к стандартной цветности <p>(4+0 – полноцветная односторонняя печать, 4+4 – полноцветная двусторонняя печать).<p>Вы можете добавить дополнительные опции указав их в запросе по почте. <p>
+
+В окне ввода введите желаемый тираж. 
+
+
+
+    <h4><p>2. Загрузите макет или сохраните параметры заказа</p></h4>
+На этом этапе Вы можете загрузить макет, соответствующий техническим требованиям. <p>Правильно подготовленный макет является залогом успешной печати и гарантией, <p>что Вы получите именно то, что Вы хотели. <p>Поэтому очень важно, при подготовке файлов макетов, следовать нашим инструкциям. 
+
+<p>
+
+Нажмите кнопку "Загрузить" и дождитесь окончания загрузки. 
+<p>
+Еще раз проверьте все параметры заказа и нажмите "Заказать".
+
+
+
+<h4><p>
+
+3. Оплатите Ваш заказ </h4>
+<p><h6>
+Вы можете произвести оплату безналичным банковским переводом по выставленному по почте счету.
+<p>
+В корзине показаны Ваши продукты. Вы можете продублировать или удалить продукт.<p> Также по Вашему желанию Вы можете сохранить информацию о параметрах заказа в форме расчета в личном кабинете.
+<p>
+Проверив все параметры заказа, нажимаете кнопку "Подтвердить заказ". <p>После подтверждения заказа Вам на почту придет автоматическое письмо с параметрами заказа и сроками запуска и сдачи.
+<h4><p>
+
+4.Возвраты </p></h4>
+<p><h6>
+В случае возникновения каких-либо претензий относительно качества предоставляемого товара или услуги, Вы имеете право обратиться с просьбой произвести возврат платежа. Согласно условиям публичной оферты, которую в обязательном порядке следует принять до оплаты заказа, возврат платежа может быть осуществлен в случае, если при изготовлении продукции был допущен брак по вине Исполнителя. В этом случае вам следует позвонить по нашему контактному телефону или написать письмо по адресу info005.ru с описанием претензии в течение 3-х рабочих дней с момента получения заказа, а также предоставить бракованный тираж. Далее, в течение 5-и рабочих дней Исполнитель рассматривает претензию и уведомляет вас о своем решении. Если в процессе рассмотрения выявлена вина Исполнителя, то в течение одного рабочего дня сумма оплаты возвращается в полном объеме, либо, в случае Вашего согласия, брак устраняется за счет Исполнителя путем повторной печати тиража при ближайшей возможности согласно расписанию.
+<p>
+Если у вас возникнут какие-нибудь вопросы, Вы можете связаться с нами по телефону +7 (495) 740 38 93 (по будням с 09:30 до 18:30) или по электронной почте info@005.ru.
 
 
 {% for 12 in banner %}
@@ -15,138 +56,6 @@
 {% endfor %}
   
 
-    <h2  style="color:rgb(229, 152, 147)" class="text-center" class="card-title"><br>{% trans 'Посчитать/заказать очень просто' %}  <br>  </h2></span>
-  
-    <br>
-   
-
-
-        
-        <h5  style="color:rgb(36, 163, 60)" class="text-center" class="card-title">{% trans 'Сначала на главном экране в разделе "Категории продуктов"выбираем название нужного продукта'  %}  <br>  </h5></span>
-
-
-       
-{% thumbnail  "350" as im %}
-
-<img  src="/media/products/choice_strE.png" width="90%">
-
-{% endthumbnail %}
-
-<h5  style="color:rgb(36, 163, 60)" class="text-center" class="card-title">{% trans 'или выбираем категорию по картинке' %}  <br>  </h5></span>
-
-{% thumbnail  "350" as im %}
-
-
-<img src="/media/products/choiceE.png" width="25%">
-
-{% endthumbnail %}
-
-<h5  style="color:rgb(36, 163, 60)" class="text-center" class="card-title">{% trans 'или ищем категорию через поиск, при этом достаточно набрать несколько первых символов с маленькой буквы' %}  <br>  </h5></span>
-
-
-
-
-{% thumbnail  "350" as im %}
-
-
-<img src="/media/products/searchE.png" width="90%">
-
-{% endthumbnail %}
-
-<h5  style="color:rgb(36, 163, 60)" class="text-center" class="card-title">{% trans 'затем делаем нужный выбор, нажимаем и оказываемся на следующем экране, где в выбранной категории выбираем нужный продукт' %}  <br>  </h5></span>
-
-
-
-
-{% thumbnail  "350" as im %}
-
-
-<img src="/media/products/choiceE2.png" width="30%">
-
-{% endthumbnail %}
-
-<h5  style="color:rgb(36, 163, 60)" class="text-center" class="card-title">{% trans ' попадаем на страничку с расчётом, где нам останется только ввести тираж, выбрать один из параметров  и посмотреть результат расчёта' %}  <br>  </h5></span>
-
-
-
-
-<h5  style="color:rgb(115, 197, 230)"  class="text-center" class="card-title">{% trans 'у вас исчезает введенное значение тиража, не волнуйтесь' %}</h5>
-         
-<h5  style="color:rgb(36, 163, 60)" class="text-center" class="card-title">{% trans ' значение тиража не слетает, результат выводится на экран  в строке  зеленым цветом, а поле ввода обнуляется для следующего расчёта' %} </h5>
-   
-<h5  style="color:rgb(115, 197, 230)"  class="text-center" class="card-title">{% trans 'вы вводите один тираж, а на экране выводится другой,' %} </h5>
-  
-<h5  style="color:rgb(36, 163, 60)" class="text-center" class="card-title">{% trans 'всё нормально, алгоритм ориентируется на min или max тиражи, то есть автоматически увеличивает тираж до минимального, или считает не больше максимального ' %}</h5>
-      
-
-
-
-
-
-
-
-
-
-{% thumbnail  "350" as im %}
-
-
-<img src="/media/products/calcE.png" width="70%">
-
-{% endthumbnail %}
-
-<h5  style="color:rgb(36, 163, 60)" class="text-center" class="card-title">{% trans 'после чего, нажимаем на кнопку "заказать" и переходим на страницу заказа' %}  <br>  </h5></span>
-
-
-{% thumbnail  "350" as im %}
-
-<img src="/media/products/orderE.png" width="70%">
-
-{% endthumbnail %}  
-
-<h5  style="color:rgb(36, 163, 60)" class="text-center" class="card-title">{% trans 'заполняем адрес доставки и вписываем своё имя в ячейку Name,чтобы получить коммерческое предложение на почту, указанную при регистрации' %}  <br>  </h5></span>
-
- 
-
-{% thumbnail  "350" as im %}
-
-<img align="center" src="/media/products/nameE.png" width="70%">
-
-
-
-{% endthumbnail %}  
-
-
-                                    
-
-
-
-    <div>       
- 
-             
-             </div>
-  
-              </p>
-             </div>
-    
-            </div>
-    
-      </div>
-
-       </div>
-      </div>
-     </div>
-    </div>
-    </div>
-    </div>
-    
-  </div>
-    <br>
-    <br>
-    <br>
-    
-
-    
-    
     {% endblock %}
     
     
