--- a/products/templates/products/delivery.html
+++ b/products/templates/products/delivery.html
@@ -6,10 +6,10 @@
 
 
 
-<h3 class="text-center"><br><br><br>{% trans 'Стоимость доставки расчитывается отдельно и составляет от 400 рублей за груз до 5 кг.' %} (<i class="fas fa-walking"></i>) 
+<h4 class="text-center"><br><br><br>{% trans 'Стоимость доставки расчитывается отдельно и составляет от 400 рублей за груз до 5 кг.' %} (<i class="fas fa-walking"></i>) 
    {% trans 'и от 1500 рублей' %}   (<i class="fas fa-truck"></i>){% trans 'за груз от 5 килограмм в зависимости от веса и расстояния и времени суток по г. Москве. Доставка в другие города рассчитывается согласно тарифам транспортной компании конкретного региона.' %} 
 
-</h3>
+</h4>
 
 
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -17,7 +17,7 @@
  <body> 
   <br><br><br>
  <center>
-  <button class="btn btn-success float-center" id="fa" name="button" value="True" onclick="myFunction()">{% trans ' Куда везём?' %}</button>
+  <button class="btn btn-secondary float-center" id="fa" name="button" value="True" onclick="myFunction()">{% trans ' Куда везём?' %}</button>
   </center>  
  </body> 
 
