--- a/products/templates/products/hmo.html
+++ b/products/templates/products/hmo.html
@@ -34,7 +34,7 @@
         <h3><p class="text-left" > 
     
       
-            <p>• {% trans 'Для расчета вам нужно в поле тираж ввести нужное количество экземпляров и нажать кнопку рассчитать.' %}
+            <p>• {% trans 'Для расчета вам нужно в поле тираж ввести нужное количество экземпляров и нажать кнопку "посчитать стоимость тиража"' %}
                 <p>•{% trans 'В таблице внизу появятся параметры расчета,сроки производства и цена.' %}
                        <p>•{% trans 'Таким образом,  из сотен готовых решений вы выбирте нужное вам и мгновенно получите техническое задание и расчет цены.'%}
                             <p>•{% trans 'Введенное значение тиража исчезнет. Не пугайтесь, оно появится в табличке внизу, а ячейка обнулится для следующего расчета.' %}
