--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -10,9 +10,6 @@
 
 
 
-
-
-
 {% load crispy_forms_tags %}
 <div class="col-md-">
   <span class="icon"><i class="fa fa-search"></i></span>
@@ -25,7 +22,7 @@
 
 <style>
   a:link {
-   color: #e99090; /* Цвет ссылок */
+   color: #110404; /* Цвет ссылок */
   }
   a:visited {
   
@@ -44,34 +41,32 @@
   </style>
 
 
-
 <br>
 
 <ul id="menu">
 
 
-  
+  <center>
     
         <li><a href="/products_by_category/2/">{% trans 'блокноты' %}</a></li>
         <li><a href="/products_by_category/16/">{% trans '• визитки' %}</a></li>
         <li><a href="/products_by_category/10/">{% trans '• журналы' %}</a></li>
         <li><a href="/products_by_category/13/">{% trans '• календари' %}</a></li>
       <li><a href="/products_by_category/5/">{% trans '• книги' %}</a></li>
-      <li><a href="/products_by_category/21/">{% trans '• конверты' %}</a></li>
+  <!--   <li><a href="/products_by_category/21/">{% trans '• конверты' %}</a></li> --> 
       <li><a href="/products_by_category/1/">{% trans '• коробки' %}</a></li>
-      <li><a href="/products_by_category/22/">{% trans '• ленты' %}</a></li>
+   <!--    <li><a href="/products_by_category/22/">{% trans '• ленты' %}</a></li>--> 
       <li><a href="/products_by_category/11/">{% trans '• листовки' %}</a></li>
       <li><a href="/products_by_category/18/">{% trans '• наклейки' %}</a></li>
       <li><a href="/products_by_category/20/">{% trans '• пакеты' %}</a></li>
       <li><a href="/products_by_category/3/">{% trans '• папки' %}</a></li>
       <li><a href="/products_by_category/7/">{% trans '• подарки' %} </a></li>
-      <li><a href="/products_by_category/25/">{% trans '• плейсметы' %}</a></li>
       <li><a href="/products_by_category/12/">{% trans '• постеры' %}</a></li>
       <li><a href="/products_by_category/17/">{% trans '• приглашения' %}</a></li>
       <li><a href="/products_by_category/14/">{% trans '• ролл апы' %}</a></li>
       <li><a href="/products_by_category/15/">{% trans '• этикетки' %}</a></li>
    
-    
+    </center>
 
   </ul>
 
@@ -146,13 +141,13 @@ height: 200px;
 
 <script type="text/javascript">
 
- var image_count = 9;
+ var image_count = 5;
 
  var interval = 5000; //пауза
 
  var time_out = 15; //скорость смены картинки
 
- var i = 9;
+ var i = 5;
 
  var timeout;
 
@@ -249,7 +244,7 @@ change_image()
     <div class="col-sm">
       <button type= "submit"
       
-      type="button" class="btn btn-success"><i class="fas fa-search"></i> {% trans 'искать' %}</button>
+      type="button" class="btn btn-secondary"><i class="fas fa-search"></i> {% trans 'искать' %}</button>
 
       </button>
     </div>
@@ -312,7 +307,7 @@ change_image()
           </a>
         </div>
       </div>
-
+<!--
       <a data-role="button" data-inline="true" href="rest.html"> 
         <div class="col-sm">
           <h2 style="color:rgb(0, 0, 0)" class="card-title"><i class="fas fa-utensils"></i></h2></span>
@@ -320,6 +315,7 @@ change_image()
           <h7 class="card-title"><span class="text-muted"> {% trans 'ресторанам' %}</h7></span>
         </a>
         </div>
+        -->
 <!--
         <a data-role="button" data-inline="true" href="hmo.html"> 
           <div class="col-sm">
@@ -387,12 +383,12 @@ change_image()
       
      <div class="card-body">
        <H7 STYLE="font-family: 'avenir next rounded std'"></H7>
-        <h5 class="card-title"><a href="products_by_category/{{ product.id }}"><p style="color:rgb(36, 163, 60)">{{ product.name }} ></p></a></h4>
+        <h5 class="card-title"><a href="products_by_category/{{ product.id }}"><p style="color:rgb(0, 0, 0)">{{ product.name }} ></p></a></h4>
         
    
  
 <h6 class="card-title"><span class="text-muted"> {{ product.preview_text}}</span></a></h6>
-<center>	<span class="price-new">от  {{product.price}} руб.</span> </center>
+<center>	<span class="price-new"> <!--от  {{product.price}} руб.--></span> </center>
 
         <p class="card-text">
          
