--- a/products/templates/products/navbar.html
+++ b/products/templates/products/navbar.html
@@ -144,7 +144,7 @@
       {% else %}
        <li class="nav-item">
  <!-- <a  class="btn btn-success" href="/accounts/login/">Логин / Регистрация</a> -->
-        <a class="btn btn-outline-success" href="/register.html/">{% trans 'Войти / Регистрация' %} </a>
+        <a class="btn btn-outline-secondary" href="/register.html/">{% trans 'Войти / Регистрация' %} </a>
       </li>
 
       <li 
@@ -188,9 +188,12 @@
   </div>
 
   <div class="dropdown">
+
+    <!--
     <button class="btn btn-outline-success dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       ru / en
       </button>
+      -->
       <div class="container">
        
         <div class="dropdown">
