--- a/products/templates/products/register.html
+++ b/products/templates/products/register.html
@@ -126,7 +126,7 @@
 
   {% endif %}
   
-  <button  class="btn btn-outline-success" type="submit">{% trans 'Выйти из системы' %}</button>
+  <button  class="btn btn-outline-secondary" type="submit">{% trans 'Выйти из системы' %}</button>
   <a class="btn btn-outline-danger" id="custom_logout_no" href="/">{% trans 'На главную' %}</a>
 </form>
 
