--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -48,15 +48,19 @@
 
 <div class="container">
   <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-7">
         <a href="/"> <img src="/media/products/logo_rose.png" width="100" height="63"></a>
         <h7>  {% trans 'мы любим свою работу' %} </h7>
        
       </div>
-      <div class="col-md-8">
+      <div class="col-md-5">
+
+
         <p>
-          <h7> <p style="color:rgb(0, 0, 0)" class="text-center" class="text-muted">  <i class=" fa fa-phone"></i>      +7(495) 740-38-93 </a><a style="color:rgb(36, 163, 60)"href="mailto:info@005.ru"><i class="  fa fa-envelope" aria-hidden="true"></i>  info@005.ru </a>
+          <h7> <p style="color:rgb(0, 0, 0)" class="text-center" class="text-muted">  <i class=" fa fa-phone"></i>      +7(495) 740-38-93 </a><a style="color:rgb(0, 0, 0)"href="mailto:info@005.ru"><i class="  fa fa-envelope" aria-hidden="true"></i>  info@005.ru </a>
         </p>
+
+     
        
         <script>
         CSS:
@@ -133,7 +137,7 @@
 
 
 
-<p style="color:rgb(36, 163, 60)" class="text-center" class="text-muted"> <a style="color:rgb(36, 163, 60)"href="mailto:info@005.ru"><i class="fa fa-envelope" aria-hidden="true"></i>info@005.ru </a>
+<p  class="text-center" class="text-muted"> <a style="color:rgb(0, 0, 0)"href="mailto:info@005.ru"><i class="fa fa-envelope" aria-hidden="true"></i>info@005.ru </a>
 
   <a href="/">
  
@@ -141,12 +145,13 @@
  
   </a>
 
+ 
+
 <i class="fa fa-phone"></i>      +7(495) 740-38-93</p></h6></span>  
    
-<p class="text-center"><a href="/terms&conditions.html"> {% trans 'условия и положения' %}   
+<p class="text-center"><a style="color:rgb(0, 0, 0)"href="/terms&conditions.html"> условия и положения  </p>
 
-
-<p class="text-center">copyright © 2021 . all rights reserved.</p>
+<p class="text-center"><a style="color:rgb(0, 0, 0)" ></a>copyright © 2022. all rights reserved.</p>
 <script>
   let btn = document.querySelector('.tlg-button')
   btn.addEventListener('click', () => {
