--- a/products/templates/products/category_products.html
+++ b/products/templates/products/category_products.html
@@ -142,7 +142,7 @@ function makeNormal() {
   </div>
   <br>  <br>
 
-    <div class="col-md-9">
+	<div class="col-md-9">
 		<div class="row">
 			{% for product in filter.qs %}
 		  <div class="col-md-6 col-sm-12 col-lg-4">
@@ -176,7 +176,7 @@ function makeNormal() {
 						  
 						  </p>
 						 </div>				
-					<div class="action-wrap">
+					<div class="action-wrap h5">
 						<!-- <a href="cart/{{ product.slug }}" class="btn btn-primary btn-sm"> Add to Cart </a>
             			<a href="cart/" class="btn btn-primary btn-sm"> View Cart </a> -->
 <!--             <a href="remove/{{ product.slug }}" class="btn btn-danger btn-sm"> Remove</a>
