--- a/products/templates/products/register.html
+++ b/products/templates/products/register.html
@@ -94,7 +94,7 @@
 
   {% trans 'Я ознакомлен/а c политикой конфенденциальности и принимаю её ' %}
   <input type="checkbox" id="linkDa"/><label for="linkDa"></label><br>
-  <span id="link"><a href="{% url 'account_signup' %}"><button class="btn btn-outline-primary btn-lg" type="submit">{% trans "Зарегистрироваться" %}</button></a></span>
+  <span id="link"><a href="{% url 'account_signup' %}"><button class="btn btn-outline-primary btn-lg" type="submit">{% trans "Зарегистрироваться" %}</button></a></span> 
 </form>
 
 </center>
@@ -106,6 +106,7 @@
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   
   {% endif %}
+
   
 
 <form method="POST" action="{% url 'account_change_password' %}" class="container-fluid text-center" id="change_password_form">
@@ -196,11 +197,11 @@
      #linkDa:checked ~ #link:after, #linkDa:checked ~ #link:before {
        content: none;
      }
-     </style>    {% trans 'Я ознакомлен/а c политикой конфенденциальности и принимаю её ' %}
+     </style>  <!-- {% trans 'Я ознакомлен/а c политикой конфенденциальности и принимаю её ' %}
      <input type="checkbox" id="linkDa"/><label for="linkDa"></label><br>
    
      <span id="link"><a class="btn btn-primary" style="background-color: #dd4b39;" href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}"><i class="fa fa-{{provider.name}}" id="social_icon"></i>{{provider.name}}</a> </span>
-     {% endfor %}
+     {% endfor %} --> 
      </ul>
 
      <p class="text-center"><a href="/privacy-policy.html">{% trans 'политика конфиденциальности' %}</a></p>
