--- a/products/templates/products/category_products.html
+++ b/products/templates/products/category_products.html
@@ -145,7 +145,8 @@ function makeNormal() {
 	<div class=".col-xs-11">
 		<div class="row">
 			{% for product in filter.qs %}
-		  <div class="col-md-6 col-sm-12 col-lg-3">
+		 <!-- <div class="col-md-6 col-sm-12 col-lg-3">-->
+			<div class="col-lg-3">
 			<figure class="card card-product">
 				<div class="img-wrap h4"> 
 
