--- a/products/templates/products/category_products.html
+++ b/products/templates/products/category_products.html
@@ -142,13 +142,17 @@ function makeNormal() {
   </div>
   <br>  <br>
 
-	<div class=".col-xs-11">
+
+
+
+
+	<div class=".col-xs-9">
 		<div class="row">
 			{% for product in filter.qs %}
 		 <!-- <div class="col-md-6 col-sm-12 col-lg-3">-->
 			<div class="col-lg-3">
 			<figure class="card card-product">
-				<div class="img-wrap h4"> 
+				<div class="card-wrap h4"> 
 
 
 			
@@ -162,6 +166,11 @@ function makeNormal() {
 
 					
 				</div>
+
+
+
+				
+				
 				<figcaption class="info-wrap">
 					<!-- Старый -->
 
