--- a/products/templates/products/category_products.html
+++ b/products/templates/products/category_products.html
@@ -144,7 +144,7 @@ function makeNormal() {
 
 
 
-
+  
 
 	<div class=".col-xs-9">
 		<div class="row">
@@ -152,7 +152,7 @@ function makeNormal() {
 		 <!-- <div class="col-md-6 col-sm-12 col-lg-3">-->
 			<div class="col-lg-3">
 			<figure class="card card-product">
-				<div class="card-wrap h4"> 
+				<div class="img-wrap h5"> 
 
 
 			
