--- a/products/templates/products/category_products.html
+++ b/products/templates/products/category_products.html
@@ -146,13 +146,13 @@ function makeNormal() {
 
   
 
-	<div class=".col-xs-3">
+	<div class=".col-xs-9">
 		<div class="row">
 			{% for product in filter.qs %}
 		 <!-- <div class="col-md-6 col-sm-12 col-lg-3">-->
-			 <div class="col-md-4 col-sm-5 col-lg-3	">
+		<div class="col-xs-1 col-md-3 col-sm-6 col-lg-3">
 			<figure class="card card-product">
-				<div class="img-wrap h5"> 
+				<div class="img-wrap h3"> 
 
 
 			
