--- a/products/templates/products/category_products.html
+++ b/products/templates/products/category_products.html
@@ -18,8 +18,7 @@
 	<br>  <br>  
    <h2 class="text-center">{% trans 'Продукты' %}</h2>
    <br>
-
-
+ 
 <!--
 
    <!DOCTYPE html> 
@@ -146,11 +145,10 @@ function makeNormal() {
 
   
 
-	<div class=".col-xs-7">
+	<div class=".col-xs-9">
 		<div class="row">
 			{% for product in filter.qs %}
-		 <!-- <div class="col-md-6 col-sm-12 col-lg-3">-->
-		<div class="col-xs-2 col-md-6 col-sm-12 col-lg-3">
+		<div class="col-md-6 col-sm-12 col-lg-3">
 			<figure class="card card-product">
 				<div class="img-wrap h3"> 
 
