--- a/products/templates/products/hmo.html
+++ b/products/templates/products/hmo.html
@@ -33,12 +33,16 @@
 
         <h3><p class="text-left" > 
     
+          <p>• Вам необходимл выбрать нужную картинку на главной странице, перейти на следующую страницу, выбрать нужную картинку еще раз и перейти на страницу расчета.
       
-            <p>• {% trans 'Для расчета вам нужно в поле тираж ввести нужное количество экземпляров и нажать кнопку "посчитать стоимость тиража"' %}
-                <p>•{% trans 'В таблице внизу появятся параметры расчета,сроки производства и цена.' %}
+            <p>• {% trans 'Для расчета вам нужно в поле тираж ввести нужное количество экземпляров и выбрать один из размеров в поле параметры,   а затем нажать кнопку "посчитать стоимость тиража"' %}
+              <p>Если Вы не нашли необходимый размер
+
+                - выбираете ближайший похожий, а в письме напишите интересующие вас размеры.
+                <p>•{% trans 'В таблице внизу появятся параметры расчета, сроки производства и цена.' %}
                        <p>•{% trans 'Таким образом,  из сотен готовых решений вы выбирте нужное вам и мгновенно получите техническое задание и расчет цены.'%}
-                            <p>•{% trans 'Введенное значение тиража исчезнет. Не пугайтесь, оно появится в табличке внизу, а ячейка обнулится для следующего расчета.' %}
-                                <p>•{% trans 'Алгоритм ориентируется на min или max тиражи, то есть автоматически увеличивает тираж до минимального, или считает не больше максимального.'%}
+                        <p>• зарегистрируйтесь и оформите заказ  
+                        
      
         {% for product in filter.qs %}
       
