--- a/products/templates/products/navbar.html
+++ b/products/templates/products/navbar.html
@@ -37,7 +37,7 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link active" href="/calc.html/"><i class="fas fa-cart-plus"></i> {% trans 'как заказать' %}</a>
+        <a class="nav-link active" href="/hmo.html/"><i class="fas fa-cart-plus"></i> {% trans 'как заказать' %}</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/"></a>
