--- a/products/templates/products/products_details.html
+++ b/products/templates/products/products_details.html
@@ -33,6 +33,212 @@
     {% endthumbnail %}
  -->
 
+<!--
+
+ <!DOCTYPE html>
+ <html>
+ <head>
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <style>
+ * {box-sizing: border-box;}
+ 
+ .img-zoom-container {
+   position: relative;
+ }
+ 
+ .img-zoom-lens {
+   position: absolute;
+   border: 1px solid #d4d4d4;
+   /*установите размер объектива:*/
+   width: 40px;
+   height: 40px;
+ }
+ 
+ .img-zoom-result {
+   border: 1px solid #d4d4d4;
+   /*установите размер результата div:*/
+   width: 300px;
+   height: 300px;
+ }
+ </style>
+ <script>
+ function imageZoom(imgID, resultID) {
+   var img, lens, result, cx, cy;
+   img = document.getElementById(imgID);
+   result = document.getElementById(resultID);
+   /*создать линзу:*/
+   lens = document.createElement("DIV");
+   lens.setAttribute("class", "img-zoom-lens");
+   /*вставить линзы:*/
+   img.parentElement.insertBefore(lens, img);
+   /*вычислите соотношение между результатом DIV и объективом:*/
+   cx = result.offsetWidth / lens.offsetWidth;
+   cy = result.offsetHeight / lens.offsetHeight;
+   /*задайте свойства фона для результата DIV:*/
+   result.style.backgroundImage = "url('" + img.src + "')";
+   result.style.backgroundSize = (img.width * cx) + "px " + (img.height * cy) + "px";
+   /*выполните функцию, когда кто-то перемещает курсор на изображение или объектив:*/
+   lens.addEventListener("mousemove", moveLens);
+   img.addEventListener("mousemove", moveLens);
+   /*а также для сенсорных экранов:*/
+   lens.addEventListener("touchmove", moveLens);
+   img.addEventListener("touchmove", moveLens);
+   function moveLens(e) {
+     var pos, x, y;
+     /*предотвратите любые другие действия, которые могут произойти при перемещении по изображению:*/
+     e.preventDefault();
+     /*получить позиции курсора x и y:*/
+     pos = getCursorPos(e);
+     /*рассчитайте положение объектива:*/
+     x = pos.x - (lens.offsetWidth / 2);
+     y = pos.y - (lens.offsetHeight / 2);
+     /*не допускайте расположения объектива вне изображения:*/
+     if (x > img.width - lens.offsetWidth) {x = img.width - lens.offsetWidth;}
+     if (x < 0) {x = 0;}
+     if (y > img.height - lens.offsetHeight) {y = img.height - lens.offsetHeight;}
+     if (y < 0) {y = 0;}
+     /*установите положение объектива:*/
+     lens.style.left = x + "px";
+     lens.style.top = y + "px";
+     /*покажите что такое объектив:*/
+     result.style.backgroundPosition = "-" + (x * cx) + "px -" + (y * cy) + "px";
+   }
+   function getCursorPos(e) {
+     var a, x = 0, y = 0;
+     e = e || window.event;
+     /*получить x и y позиции изображения:*/
+     a = img.getBoundingClientRect();
+     /*вычислите координаты курсора x и y относительно изображения:*/
+     x = e.pageX - a.left;
+     y = e.pageY - a.top;
+     /*рассмотрим любую прокрутку страницы:*/
+     x = x - window.pageXOffset;
+     y = y - window.pageYOffset;
+     return {x : x, y : y};
+   }
+ }
+ </script>
+ </head>
+ <body>
+ 
+ 
+ 
+
+ 
+ 
+ <script>
+ // Инициировать эффект масштабирования:
+ imageZoom("myimage", "myresult");
+ </script>
+ 
+ </body>
+ </html>
+
+-->
+<!--
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+* {box-sizing: border-box;}
+
+.img-magnifier-container {
+  position:relative;
+}
+
+.img-magnifier-glass {
+  position: absolute;
+  border: 3px solid #000;
+  border-radius: 50%;
+  cursor: none;
+  /*Установите размер увеличительного стекла:*/
+  width: 100px;
+  height: 100px;
+}
+</style>
+<script>
+function magnify(imgID, zoom) {
+  var img, glass, w, h, bw;
+  img = document.getElementById(imgID);
+  /*создать увеличительное стекло:*/
+  glass = document.createElement("DIV");
+  glass.setAttribute("class", "img-magnifier-glass");
+  /*вставить увеличительное стекло:*/
+  img.parentElement.insertBefore(glass, img);
+  /*установите свойства фона для увеличительного стекла:*/
+  glass.style.backgroundImage = "url('" + img.src + "')";
+  glass.style.backgroundRepeat = "no-repeat";
+  glass.style.backgroundSize = (img.width * zoom) + "px " + (img.height * zoom) + "px";
+  bw = 3;
+  w = glass.offsetWidth / 2;
+  h = glass.offsetHeight / 2;
+  /*выполните функцию, когда кто-то перемещает лупу по изображению:*/
+  glass.addEventListener("mousemove", moveMagnifier);
+  img.addEventListener("mousemove", moveMagnifier);
+  /*а также для сенсорных экранов:*/
+  glass.addEventListener("touchmove", moveMagnifier);
+  img.addEventListener("touchmove", moveMagnifier);
+  function moveMagnifier(e) {
+    var pos, x, y;
+    /*предотвратите любые другие действия, которые могут произойти при перемещении по изображению*/
+    e.preventDefault();
+    /*получить позиции курсора x и y:*/
+    pos = getCursorPos(e);
+    x = pos.x;
+    y = pos.y;
+    /*не допускайте размещения увеличительного стекла вне изображения:*/
+    if (x > img.width - (w / zoom)) {x = img.width - (w / zoom);}
+    if (x < w / zoom) {x = w / zoom;}
+    if (y > img.height - (h / zoom)) {y = img.height - (h / zoom);}
+    if (y < h / zoom) {y = h / zoom;}
+    /*установите положение увеличительного стекла:*/
+    glass.style.left = (x - w) + "px";
+    glass.style.top = (y - h) + "px";
+    /*покажите что такое лупа:*/
+    glass.style.backgroundPosition = "-" + ((x * zoom) - w + bw) + "px -" + ((y * zoom) - h + bw) + "px";
+  }
+  function getCursorPos(e) {
+    var a, x = 0, y = 0;
+    e = e || window.event;
+    /*получить x и y позиции изображения:*/
+    a = img.getBoundingClientRect();
+    /*вычислите координаты курсора x и y относительно изображения:*/
+    x = e.pageX - a.left;
+    y = e.pageY - a.top;
+    /*рассмотрим любую прокрутку страницы:*/
+    x = x - window.pageXOffset;
+    y = y - window.pageYOffset;
+    return {x : x, y : y};
+  }
+}
+</script>
+</head>
+<body>
+
+
+
+
+<div class="img-magnifier-container">
+  <img id="myimage"  {% thumbnail product.mainimage "350" as im %}
+  <img align="center" src="{{ im.url }}"  class="img-fluid">
+{% endthumbnail %}  
+</div>
+
+
+
+<script>
+/* Инициировать функцию увеличения
+   с идентификатором изображения и силой увеличительного стекла:*/
+magnify("myimage", 3);
+</script>
+
+</body>
+</html>
+
+
+-->
+
     <!DOCTYPE html>
     <html>
      <head>
@@ -125,10 +331,27 @@
   <center> <h3 class="title mb-3"> {{ product.name }}</h3></center> 
 
 </ul>
+
+<!--
+
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+   "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+ <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>Тег FONT</title>
+ </head>
+ <body>
+  <center> <p><font size="15" color="gray" face="Brush Script MT">Экспертная полиграфия</font> </p></center> 
+ <center> <p><font size="4" color="gray" face="Good Vibes Pro ">{{product.detail_text }}</font> </p></center>
+ </body>
+</html>
+-->
+
 <ul>
     <div onmouseover="this.style.color='black';" onmouseout="this.style.color='black';">{{product.detail_text }}</div>
  
-</ul>
+</ul> 
 
 <p id="demo"></p>
 
