--- a/products/templates/products/category_products.html
+++ b/products/templates/products/category_products.html
@@ -148,8 +148,8 @@ function makeNormal() {
 	<div class=".col-xs-9">
 		<div class="row">
 			{% for product in filter.qs %}
-		<div class="col-md-6 col-sm-12 col-lg-3">
-			<figure class="card card-product">
+		<div class="col-md-6 col-sm-12 col-lg-4">
+		<!--	<figure class="card card-product"> -->
 				<div class="img-wrap h4"> 
 
 
@@ -172,7 +172,7 @@ function makeNormal() {
 				<figcaption class="info-wrap">
 					<!-- Старый -->
 
-					<div class="card-body">
+					<div class="card-body"> 
 						
 					 <h5 class="card-title"><a href="/product/{{ product.slug }}"><p style="color:rgb(0, 0, 0)">{{ product.name }}></p></a></h5>  
 				
