--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -98,90 +98,92 @@
  <center> <p><font size="15" color="gray" face="Good Vibes Pro ">Экспертная полиграфия</font> </p></center>
  </body>
 </html>
+<center>
+
+  <!DOCTYPE HTML>
+  <html>
+  <head>
+  <title></title>
+  <style type="text/css">
+  img{
+    width="100%
+  height: 200px;
+  
+    }
+  
+  </style>
+  
+  </head>
+  
+  <body>
+  
+  <div id="header"  class="div">
+  
+   <img src="/media/products/test1.png" id="img_1"  style="position:absolute; "  />
+  
+   <img src="/media/products/test2.png"  id="img_2"  style="position:absolute;opacity: 0; filter: alpha(opacity=0); "  />
+  
+   <img src="/media/products/test3.png"  id="img_3"  style="position:absolute;opacity: 0; filter: alpha(opacity=0); "  />
+  
+   <img src="/media/products/test4.png"  id="img_4"  style="position:absolute;opacity: 0; filter: alpha(opacity=0); " />
+  
+   <img src="/media/products/test5.png"  id="img_5"  style="position:absolute;opacity: 0; filter: alpha(opacity=0); "  />
+   
+   <img src="/media/products/test6.png"  id="img_6"  style="position:absolute;opacity: 0; filter: alpha(opacity=0); "  />
+  
+   <img src="/media/products/test7.png"  id="img_7"  style="position:absolute;opacity: 0; filter: alpha(opacity=0); "  />
+  
+   <img src="/media/products/test8.png"  id="img_8"  style="position:absolute;opacity: 0; filter: alpha(opacity=0); "  />
+  
+   <img src="/media/products/test9.png"  id="img_9"  style="position:absolute;opacity: 0; filter: alpha(opacity=0); "  />
+  
+  </div>
+  
+  <script type="text/javascript">
+  
+   var image_count = 5;
+  
+   var interval = 5000; //пауза
+  
+   var time_out = 15; //скорость смены картинки
+  
+   var i = 5;
+  
+   var timeout;
+  
+   var opacity = 100;
+  
+   function change_image() {
+  
+   opacity--;
+  
+   var j = i + 1;
+  
+   var current_image = 'img_' + i;
+  
+   if (i == image_count) j = 1;
+  var next_image = 'img_' + j;
+  document.getElementById(current_image).style.opacity=opacity/100;
+  document.getElementById(current_image).style.filter='alpha(opacity='+opacity+')';
+  document.getElementById(next_image).style.opacity= (100-opacity)/100;
+  document.getElementById(next_image).style.filter=' alpha(opacity='+(100-opacity)+')';
+  timeout = setTimeout("change_image()", time_out);
+  if (opacity==1) {
+  opacity = 100;
+  clearTimeout(timeout);
+  i++;
+  if (i>image_count) i=1;
+  timeout = setTimeout("change_image()", interval);
+   }
+   }
+  change_image()
+  </script>
+  </body>
+  </html>
+  
 
 
-
-
-<!DOCTYPE HTML>
-<html>
-<head>
-<title></title>
-<style type="text/css">
-img{
-  width="100%
-height: 200px;
-
-  }
-
-</style>
-
-</head>
-
-<body>
-
-<div id="header"  class="div">
-
- <img src="/media/products/test1.png" id="img_1"  style="position:absolute; "  />
-
- <img src="/media/products/test2.png"  id="img_2"  style="position:absolute;opacity: 0; filter: alpha(opacity=0); "  />
-
- <img src="/media/products/test3.png"  id="img_3"  style="position:absolute;opacity: 0; filter: alpha(opacity=0); "  />
-
- <img src="/media/products/test4.png"  id="img_4"  style="position:absolute;opacity: 0; filter: alpha(opacity=0); " />
-
- <img src="/media/products/test5.png"  id="img_5"  style="position:absolute;opacity: 0; filter: alpha(opacity=0); "  />
- 
- <img src="/media/products/test6.png"  id="img_6"  style="position:absolute;opacity: 0; filter: alpha(opacity=0); "  />
-
- <img src="/media/products/test7.png"  id="img_7"  style="position:absolute;opacity: 0; filter: alpha(opacity=0); "  />
-
- <img src="/media/products/test8.png"  id="img_8"  style="position:absolute;opacity: 0; filter: alpha(opacity=0); "  />
-
- <img src="/media/products/test9.png"  id="img_9"  style="position:absolute;opacity: 0; filter: alpha(opacity=0); "  />
-
-</div>
-
-<script type="text/javascript">
-
- var image_count = 5;
-
- var interval = 5000; //пауза
-
- var time_out = 15; //скорость смены картинки
-
- var i = 5;
-
- var timeout;
-
- var opacity = 100;
-
- function change_image() {
-
- opacity--;
-
- var j = i + 1;
-
- var current_image = 'img_' + i;
-
- if (i == image_count) j = 1;
-var next_image = 'img_' + j;
-document.getElementById(current_image).style.opacity=opacity/100;
-document.getElementById(current_image).style.filter='alpha(opacity='+opacity+')';
-document.getElementById(next_image).style.opacity= (100-opacity)/100;
-document.getElementById(next_image).style.filter=' alpha(opacity='+(100-opacity)+')';
-timeout = setTimeout("change_image()", time_out);
-if (opacity==1) {
-opacity = 100;
-clearTimeout(timeout);
-i++;
-if (i>image_count) i=1;
-timeout = setTimeout("change_image()", interval);
- }
- }
-change_image()
-</script>
-</body>
-</html>
+</center>
 
 
 <!--
@@ -233,7 +235,7 @@ change_image()
 
 
 
-<br><br><br>
+<br><br><br><br><br><br><br><br><br>
 
 <div class="container">
   <div class="row">
